--- a/Consumers/Consumer.Pessoa.Api/Consumer.Pessoa.Api.csproj
+++ b/Consumers/Consumer.Pessoa.Api/Consumer.Pessoa.Api.csproj
@@ -1,20 +1,21 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
 	  <PackageReference Include="MassTransit" Version="8.0.13" />
 	  <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
 	  <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.13" />
-	  <PackageReference Include="AutoMapper" Version="8.1.1" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lartech.Domain\Lartech.Domain.csproj" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
